--- a/Components/Layout/Header.razor
+++ b/Components/Layout/Header.razor
@@ -9,7 +9,7 @@
         <nav class="nav-menu">
             <a href="/">О НАС</a>
             <a href="#parts">ЗАПЧАСТИ</a>
-            <a href="#trucklist">АВТОРАЗБОР</a>
+            <a href="#truckslist">АВТОРАЗБОР</a>
             <a href="#transportation">ГРУЗОПЕРЕВОЗКИ</a>
             <a href="#footer">КОНТАКТЫ</a>
         </nav>
