--- a/Components/Layout/Main/TrucksList.razor
+++ b/Components/Layout/Main/TrucksList.razor
@@ -1,10 +1,9 @@
-﻿@page "/trucklist"
-@rendermode InteractiveServer
+﻿@rendermode InteractiveServer
 @using AtbWeb.Components
 @using AtbWeb.Components.Clasess
 @using AtbWeb.Components.Scripts
 
-<div class="details-container">
+<div id="truckslist" class="details-container">
     <div class="section-title-container">
         <h2 class="section-title">Автомобили в разборе</h2>
     </div>
